# yolo_trt_sdk

./: CMakeLists.txt  README.md
examples/: benchmark.cpp  cmd_line_util.h  object_detection_csi_jetson.cpp  object_detection_image.cpp  object_detection_video_stream.cpp
include/: yolo_trt_bridge.h  yolov8.h  yolov8.hpp
include/yolov8/: yolov8.hpp
libs/tensorrt-cpp-api/: README.md
src/: trt_bridge.cpp  yolov8.cpp
tests/: test_header.cpp
